Apply an array of rewardIds to an order
